<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngreTarjeta">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="328dp"
        android:layout_height="61dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="41dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombreT"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="118dp"
        android:layout_marginEnd="41dp"
        android:ems="10"
        android:hint="@string/propietario"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/contraT"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="184dp"
        android:layout_marginEnd="41dp"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/bin"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="252dp"
        android:layout_marginEnd="41dp"
        android:ems="10"
        android:hint="@string/BIN"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/tipoT"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="408dp"
        android:layout_marginEnd="218dp"
        android:entries="@array/DoC"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/entidad"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="330dp"
        android:layout_marginEnd="41dp"
        android:entries="@array/entidadbancaria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/cvv"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="482dp"
        android:layout_marginEnd="219dp"
        android:ems="10"
        android:hint="@string/CVV"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/caducidad"
        android:layout_width="148dp"
        android:layout_height="50dp"
        android:layout_marginStart="45dp"
        android:layout_marginTop="555dp"
        android:layout_marginEnd="218dp"
        android:ems="10"
        android:hint="@string/caducidad"
        android:inputType="date"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bot12"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="408dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="#03A9F4"
        android:onClick="guardarP"
        android:text="@string/Agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bot13"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="464dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="#2196F3"
        android:onClick="buscarP"
        android:text="@string/Buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bot14"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="521dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="#2196F3"
        android:onClick="AlertA"
        android:text="@string/Actualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bot15"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="578dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="#2196F3"
        android:onClick="AlertB"
        android:text="@string/Borrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bot16"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="656dp"
        android:layout_marginEnd="219dp"
        android:backgroundTint="#2196F3"
        android:onClick="regresar"
        android:text="@string/Regresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bot17"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="656dp"
        android:layout_marginEnd="41dp"
        android:backgroundTint="#2196F3"
        android:onClick="limpiar"
        android:text="@string/Limpiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>