<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngreProveedor">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="328dp"
        android:layout_height="61dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="41dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/code"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="43dp"
        android:ems="10"
        android:hint="@string/codePro"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombre"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="188dp"
        android:layout_marginEnd="43dp"
        android:ems="10"
        android:hint="@string/nombrePro"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/costo"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="256dp"
        android:layout_marginEnd="43dp"
        android:ems="10"
        android:hint="@string/costoPro"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="328dp"
        android:layout_marginEnd="44dp"
        android:ems="10"
        android:hint="@string/correoPro"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/categoria"
        android:layout_width="148dp"
        android:layout_height="56dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="411dp"
        android:layout_marginEnd="221dp"
        android:entries="@array/proveedor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="148dp"
        android:layout_height="134dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="492dp"
        android:layout_marginEnd="221dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView11"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/Entrega"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <RadioButton
            android:id="@+id/completada"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Completada"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioButton
            android:id="@+id/pendiente"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="Pendiente"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </RadioGroup>

    <Button
        android:id="@+id/bot"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="408dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="#03A9F4"
        android:onClick="guardarP"
        android:text="@string/Agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bot7"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="464dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="#2196F3"
        android:onClick="buscarP"
        android:text="@string/Buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bot8"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="521dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="#2196F3"
        android:onClick="AlertA"
        android:text="@string/Actualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bot9"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="578dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="#2196F3"
        android:onClick="AlertB"
        android:text="@string/Borrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bot10"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="656dp"
        android:layout_marginEnd="219dp"
        android:backgroundTint="#2196F3"
        android:onClick="regresar"
        android:text="@string/Regresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bot11"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="656dp"
        android:layout_marginEnd="41dp"
        android:backgroundTint="#2196F3"
        android:onClick="limpiar"
        android:text="@string/Limpiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>