<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".IngreProductos">

    <TextView
        android:id="@+id/textView8"
        android:layout_width="328dp"
        android:layout_height="61dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="27dp"
        android:layout_marginEnd="41dp"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Display2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/codeP"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="43dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="43dp"
        android:ems="10"
        android:hint="@string/codigoP"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/nombreP"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="197dp"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:hint="@string/producN"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/precioP"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="269dp"
        android:layout_marginEnd="45dp"
        android:ems="10"
        android:hint="@string/precioP"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/categoriaP"
        android:layout_width="325dp"
        android:layout_height="50dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="45dp"
        android:entries="@array/categoria"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:layout_width="139dp"
        android:layout_height="228dp"
        android:layout_marginStart="41dp"
        android:layout_marginTop="408dp"
        android:layout_marginEnd="231dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/textView9"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/descuento"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <RadioButton
            android:id="@+id/des75"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="75%"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioButton
            android:id="@+id/des50"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="50%"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioButton
            android:id="@+id/des25"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="25%"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

        <RadioButton
            android:id="@+id/des0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="none"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium" />
    </RadioGroup>

    <Button
        android:id="@+id/bot1"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="408dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="#03A9F4"
        android:onClick="guardarP"
        android:text="@string/Agregar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bot2"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="464dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="#2196F3"
        android:onClick="buscarP"
        android:text="@string/Buscar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bot3"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="521dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="#2196F3"
        android:onClick="AlertA"
        android:text="@string/Actualizar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bot4"
        android:layout_width="140dp"
        android:layout_height="50dp"
        android:layout_marginStart="228dp"
        android:layout_marginTop="578dp"
        android:layout_marginEnd="43dp"
        android:backgroundTint="#2196F3"
        android:onClick="AlertB"
        android:text="@string/Borrar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bot5"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="656dp"
        android:layout_marginEnd="219dp"
        android:backgroundTint="#2196F3"
        android:onClick="regresar"
        android:text="@string/Regresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bot6"
        android:layout_width="150dp"
        android:layout_height="50dp"
        android:layout_marginStart="220dp"
        android:layout_marginTop="656dp"
        android:layout_marginEnd="41dp"
        android:backgroundTint="#2196F3"
        android:onClick="limpiar"
        android:text="@string/Limpiar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>